Closed Bug 1808053 Opened 3 years ago Closed 3 years ago

Answer with no codecs in common with offer causes tab crash on debug builds

Categories

(Core :: WebRTC: Signaling, defect, P3)

defect

Tracking

()

RESOLVED FIXED
110 Branch
Tracking Status
firefox110 --- fixed

People

(Reporter: bwc, Assigned: bwc)

Details

Attachments

(2 files)

This is a pretty silly bug. Either we should be throwing when such an answer is set (RFC 3264 says there must be at least one codec in common if the m-section is receiving), or we should treat it as a rejected m-section. Since this is a violation of RFC 3264, the right thing is probably to throw.

I should note that I don't see this crash on crash-stats, which is nice I guess.

Pushed by bcampen@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/3e9b458590ac Test case for bug. r=mjf https://hg.mozilla.org/integration/autoland/rev/0608c14183e2 Throw if a non-rejected answer msection contains no codec in common with offer. r=mjf
Regressions: 1808635
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 110 Branch
No longer regressions: 1809508
No longer regressions: 1808635
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: