Bug 1808053: Throw if a non-rejected answer msection contains no codec in common with offer. r=mjf

Differential Revision: https://phabricator.services.mozilla.com/D165993